--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "*",
-    "@supabase/supabase-js": "*",
-    "expo": "*",
-    "expo-image-picker": "*",
-    "expo-router": "*",
-    "expo-status-bar": "*",
-    "react": "*",
-    "react-native": "*",
-    "react-native-safe-area-context": "*",
-    "react-native-screens": "*",
+    "@expo/vector-icons": "14.1.0",
+    "@supabase/supabase-js": "2.56.0",
+    "expo": "53.0.22",
+    "expo-image-picker": "16.1.4",
+    "expo-router": "5.1.5",
+    "expo-status-bar": "2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.6",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "0.20.0"
   },
   "devDependencies": {
-    "@types/react": "*",
-    "@types/react-native": "*",
-    "typescript": "*"
+    "@types/react": "19.0.14",
+    "@types/react-native": "0.72.8",
+    "typescript": "5.8.3"
   }
 }
