--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "expo-image-picker": "16.1.4",
     "expo-router": "5.1.5",
     "expo-status-bar": "2.2.3",
+    "expo-web-browser": "^14.2.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-maps": "^1.25.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "4.11.1",
-    "react-dom": "19.0.0",
     "react-native-web": "0.20.0"
   },
   "devDependencies": {
     "@types/react": "19.0.14",
     "@types/react-native": "0.72.8",
+    "@types/react-native-maps": "^0.24.1",
     "typescript": "5.8.3"
   }
 }
