--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo/vector-icons": "14.1.0",
     "@supabase/supabase-js": "2.56.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.5",
     "expo": "53.0.22",
     "expo-image-picker": "16.1.4",
     "expo-router": "5.1.5",
